--- a/custom/themes/ingenuity/package.json
+++ b/custom/themes/ingenuity/package.json
@@ -5,6 +5,7 @@
     "gulp-imagemin": "~2.2.1",
     "gulp-jshint": "~1.9.0",
     "gulp-livereload": "~3.0.2",
+    "gulp-minify-css": "^1.2.1",
     "gulp-notify": "~2.1.0",
     "gulp-plumber": "~0.6.6",
     "gulp-ruby-sass": "^1.0.5",
