--- a/styleguide/custom/themes/styleguide/package.json
+++ b/styleguide/custom/themes/styleguide/package.json
@@ -7,8 +7,11 @@
     "gulp-livereload": "~3.0.2",
     "gulp-notify": "~2.1.0",
     "gulp-plumber": "~0.6.6",
-    "gulp-ruby-sass": "~0.7.1",
+    "gulp-ruby-sass": "^1.0.0-alpha",
     "gulp-uglifyjs": "~0.5.0",
     "imagemin-pngquant": "~4.0.0"
+  },
+  "dependencies": {
+    "gulp": "^3.9.0"
   }
 }
