--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "cross-env NODE_ENV=production webpack --progress --hide-modules"
   },
   "dependencies": {
-    "axios": "^0.16.2",
+    "axios": "^0.17.1",
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
     "babel-plugin-transform-runtime": "^6.23.0",
@@ -27,11 +27,13 @@
     "vue-loader": "^13.0.5",
     "vue-particles": "^1.0.9",
     "vue-router": "^2.7.0",
-    "vue-social-sharing": "^2.3.3"
+    "vue-social-sharing": "^2.3.3",
+    "vuex": "^3.0.1"
   },
   "devDependencies": {
     "babel-polyfill": "^6.26.0",
     "cross-env": "^3.0.0",
+    "url-loader": "^0.6.2",
     "vue-analytics": "^5.6.0",
     "vue-template-compiler": "^2.4.4",
     "webpack": "^3.6.0",
