--- a/package.json
+++ b/package.json
@@ -32,11 +32,15 @@
   },
   "devDependencies": {
     "babel-polyfill": "^6.26.0",
+    "browserify": "^16.1.1",
+    "browserify-shim": "^3.8.14",
     "cross-env": "^3.0.0",
     "url-loader": "^0.6.2",
     "vue-analytics": "^5.6.0",
+    "vue-in-viewport-directive": "^1.1.4",
     "vue-template-compiler": "^2.4.4",
     "webpack": "^3.6.0",
-    "webpack-dev-server": "^2.9.1"
+    "webpack-dev-server": "^2.9.1",
+    "wow.js": "^1.2.2"
   }
 }
