--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "vue": "^2.4.4",
     "vue-axios": "^2.0.2",
     "vue-loader": "^13.0.5",
+    "vue-meta": "^1.4.4",
     "vue-particles": "^1.0.9",
     "vue-router": "^2.7.0",
     "vue-social-sharing": "^2.3.3",
