--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     },
     "dependencies": {
         "axios": "^0.18.0",
+        "hamburgers": "^0.9.3",
         "nuxt": "^1.4.1",
         "vue-meta": "^1.5.0"
     },
