Update About page tab system

--- a/package.json
+++ b/package.json
@@ -12,5 +12,10 @@
     "devDependencies": {
         "node-sass": "^4.9.1",
         "sass-loader": "^7.0.3"
+    },
+    "config": {
+        "nuxt": {
+            "port": "3838"
+        }
     }
 }
