--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
         "dev": "nuxt"
     },
     "dependencies": {
+        "@nuxtjs/google-analytics": "^2.1.0",
         "aos": "^2.3.4",
         "axios": "^0.18.0",
         "hamburgers": "^0.9.3",
