--- a/app/package.json
+++ b/app/package.json
@@ -14,6 +14,7 @@
         "aos": "^2.3.4",
         "hamburgers": "^0.9.3",
         "nuxt": "^2.8.1",
+        "vue": "^2.6.10",
         "vue-meta": "^1.5.0"
     },
     "devDependencies": {
