--- a/app/package.json
+++ b/app/package.json
@@ -7,19 +7,17 @@
         "generate": "nuxt generate"
     },
     "dependencies": {
-        "@nuxt/webpack": "^2.8.1",
+        "nuxt": "^2.11.0",
         "@nuxtjs/axios": "^5.4.1",
-        "@nuxtjs/dotenv": "^1.3.0",
-        "@nuxtjs/google-analytics": "^2.1.0",
         "aos": "^2.3.4",
-        "hamburgers": "^0.9.3",
-        "nuxt": "^2.8.1",
-        "vue-meta": "^2.3.1",
-        "vue-smooth-scroll": "^1.0.13"
+        "hamburgers": "^0.9.3"
     },
     "devDependencies": {
-        "cross-env": "^5.2.0",
-        "node-sass": "^4.12.0",
-        "sass-loader": "^7.1.0"
+        "@nuxtjs/dotenv": "^1.4.0",
+        "@nuxtjs/google-analytics": "^2.2.2",
+        "@nuxtjs/moment": "^1.6.0",
+        "cross-env": "^6.0.3",
+        "node-sass": "^4.13.1",
+        "sass-loader": "^8.0.0"
     }
 }
