--- a/app/package.json
+++ b/app/package.json
@@ -10,14 +10,14 @@
         "generate": "nuxt generate"
     },
     "dependencies": {
-        "nuxt": "^2.11.0",
-        "@nuxtjs/axios": "^5.4.1",
+        "@nuxtjs/axios": "^5.12.0",
         "aos": "^2.3.4",
-        "hamburgers": "^0.9.3"
+        "hamburgers": "^0.9.3",
+        "nuxt": "^2.13.3"
     },
     "devDependencies": {
         "@nuxtjs/dotenv": "^1.4.0",
-        "@nuxtjs/google-analytics": "^2.2.2",
+        "@nuxtjs/google-analytics": "^2.4.0",
         "cross-env": "^6.0.3",
         "node-sass": "^4.14.1",
         "sass-loader": "^8.0.0"
