--- a/app/package.json
+++ b/app/package.json
@@ -4,7 +4,7 @@
     "description": "Ingenuity Nuxt App",
     "author": "hubret",
     "scripts": {
-        "dev": "nuxt",
+        "dev": "nuxt --hostname 0.0.0.0",
         "build": "nuxt build",
         "start": "nuxt start",
         "generate": "nuxt generate"
